; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/diff/src/extr_diff.c_check_stdout.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/diff/src/extr_diff.c_check_stdout.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@stdout = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [13 x i8] c"write failed\00", align 1
@.str.1 = private unnamed_addr constant [16 x i8] c"standard output\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @check_stdout to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @check_stdout() #0 {
  %1 = load i32, i32* @stdout, align 4
  %2 = call i64 @ferror(i32 %1)
  %3 = icmp ne i64 %2, 0
  br i1 %3, label %4, label %6

4:                                                ; preds = %0
  %5 = call i32 @fatal(i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str, i64 0, i64 0))
  br label %14

6:                                                ; preds = %0
  %7 = load i32, i32* @stdout, align 4
  %8 = call i64 @fclose(i32 %7)
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %13

10:                                               ; preds = %6
  %11 = call i32 @_(i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.1, i64 0, i64 0))
  %12 = call i32 @pfatal_with_name(i32 %11)
  br label %13

13:                                               ; preds = %10, %6
  br label %14

14:                                               ; preds = %13, %4
  ret void
}

declare dso_local i64 @ferror(i32) #1

declare dso_local i32 @fatal(i8*) #1

declare dso_local i64 @fclose(i32) #1

declare dso_local i32 @pfatal_with_name(i32) #1

declare dso_local i32 @_(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
